[gd_scene load_steps=2 format=3 uid="uid://b6xddb5ap3qox"]

[ext_resource type="Script" path="res://Scripts/Player/Dialogue.gd" id="1_v6a1x"]

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6a1x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -353.5
offset_top = -176.0
offset_right = 353.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.32549, 0.478431, 0.458824, 1)

[node name="CharacterName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -176.0
offset_right = -153.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
text = "Character Name"

[node name="Text" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -327.0
offset_top = -130.0
offset_right = 344.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
text = "placeholder text....."

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -56.0
offset_right = 344.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
text = "Next"
flat = true
alignment = 2

[node name="CancelButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -343.0
offset_top = -58.0
offset_right = -15.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
text = "Not now"
flat = true
alignment = 0

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
